--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "goit-js-hw-09-01",
-  "version": "1.1.6",
-  "description": "**Read in other languages: [Русский](README.md), [Polski](README.pl.md).**",
-  "homepage": "ttps://illfoxlli.github.io/goit-js-hw-09-01/",
+  "version": "2.0.66",
+  "description": "",
+  "homepage": "https://github.com/illFoXlli/goit-js-hw-09-01",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-09-01/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/goit-js-hw-09-01.git"
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
   "keywords": [],
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/goit-js-hw-09-01/issues"
-  },
-  "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "path-browserify": "^1.0.1",
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
-  
+  "dependencies": {
+    "@vimeo/player": "^2.17.1",
+    "lodash.throttle": "^4.1.1",
+    "simplelightbox": "^2.10.3"
+  }
 }
