--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
     "@vimeo/player": "^2.17.1",
+    "flatpickr": "^4.6.13",
     "lodash.throttle": "^4.1.1",
+    "notiflix": "^3.2.5",
     "simplelightbox": "^2.10.3"
   }
 }
